Creado mediante Colaboratory

--- a/src/WebScrapping.ipynb
+++ b/src/WebScrapping.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1vnCtEYPHhM_wOMzT72R5J9PHNoFanx9j",
-      "authorship_tag": "ABX9TyMX8cJ0tInUte8UvKmPwVdm",
+      "authorship_tag": "ABX9TyMl3RyTpa6LQwyH4tPhP1qL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,6 +166,9 @@
         "\n",
         "\n",
         "* **State**. Estado. \n",
+        "* **Total citizen population**. Total de ciudadanos que viven en el estado.\n",
+        "* **Total registration**. El registro total de la población que se inscribio en el estado para votar. \n",
+        "* **Registration as a percentage of citizen population**.  Porcentaje del total de la poblacion apta para votar\n",
         "* **All voters required to show ID**. Todos los votantes deben mostrar una identificación (\"Sí\" indica que todos los votantes deben presentar una identificación en las urnas). \n",
         "* **Select voters required to show ID**. Seleccione los votantes que deben mostrar una identificación (una entrada en este campo describe qué votantes deben mostrar una identificación en las urnas si no hay un requisito de identificación universal). \n",
         "* **Accepted IDs** Identificaciones aceptadas (una lista de formas aceptables de identificación). \n",
